maven-start
Criado a classe App para da start pelo maven.